@@ -3,14 +3,14 @@ Hash: SHA1
 
 AUX Gentoo 644 RMD160 29853c59779a2eb685aa4082bf5c312588fbe633 SHA1 01f2135774ead9534fb374cfbeb7eb123d9aff55 SHA256 1ddff80be5707ff8eb888d8f41d9cd0df5c7e0e1bd84c28ed962b4c71028efc1
 DIST xfce-utils-4.5.92.tar.bz2 599262 RMD160 d4fac453effc22ccc8e453b0367f75b785e9a690 SHA1 44521a81d662458e6aaaabea2d7abb52d9f06613 SHA256 71327b5dc31c8a2d354c97a2661ebac6a9b555db553eeb5bbdbddce911563e19
-EBUILD xfce-utils-4.5.92.ebuild 927 RMD160 3dbecfbd10c7934a97670bb2c7ac47e4afae6c42 SHA1 6bfa36b1a709a6efedb704e5f0bfe54fc9c12058 SHA256 415e7f294e794dc74c49aafd9268b6ef2c24746d3bfc433a659d7a8f12faa780
-EBUILD xfce-utils-9999.ebuild 927 RMD160 3dbecfbd10c7934a97670bb2c7ac47e4afae6c42 SHA1 6bfa36b1a709a6efedb704e5f0bfe54fc9c12058 SHA256 415e7f294e794dc74c49aafd9268b6ef2c24746d3bfc433a659d7a8f12faa780
-MISC ChangeLog 1271 RMD160 1052b4552c9f2b4cdad91eba087ccf5dea660807 SHA1 dd39ebee1e69b83feeea6ca1308a5a790b9e0108 SHA256 12967ca85e5d55bf7be7d07afc8aac0ccbc87ec2d8735429d6ce524ceaa7fa0c
+EBUILD xfce-utils-4.5.92.ebuild 1176 RMD160 396fbca4215389f385d0e7d278fe178420ea1c65 SHA1 b8fab4f51cd96a0cc02e3b015bae97ce8961a8a8 SHA256 f057fd294e553d52ef3bca288d2ed4e522222884825921498688a21154daf50d
+EBUILD xfce-utils-9999.ebuild 1176 RMD160 396fbca4215389f385d0e7d278fe178420ea1c65 SHA1 b8fab4f51cd96a0cc02e3b015bae97ce8961a8a8 SHA256 f057fd294e553d52ef3bca288d2ed4e522222884825921498688a21154daf50d
+MISC ChangeLog 1426 RMD160 32fd4eb9bc2435653a1499866a1fa38ccbc51995 SHA1 60639135790469a4012e7fb3b1f09aa640da7f86 SHA256 3260e9c47e52a2f1f3fb1931b8e8a95888c69bc1292846d4751b2bd85a2ba523
 MISC metadata.xml 218 RMD160 e064747a2c888959d939ed09a70c242d905c89ea SHA1 8ff18a8acc37d299a3cc7b30663ca3eb0f91032e SHA256 c47df69ae42900828c5afb0aa77ee6f9ddca55a79b3326f69a0bbf8119f3d5df
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAklK3VUACgkQKhnDs22gwa+o3wCg2HKKI6yEcDhUvhjrfQpxFAGE
-4t8AnRZw6yFgzMPAcyPwk4s9nejqQ3gt
-=2dIt
+iEYEARECAAYFAklLmA0ACgkQKhnDs22gwa9ApACgw+Lgb9W5Ik4WBmi+a90hDTzA
+2XwAniPS3NoqTTMxaojq+htHSQi9IBay
+=Wuzm
 -----END PGP SIGNATURE-----
