@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Dec 2008; Christoph Mende <angelos@gentoo.org>
+  xfce-utils-4.5.92.ebuild, xfce-utils-9999.ebuild:
+  Moved the session file generation to xfce-utils
+
   18 Dec 2008; Christoph Mende <angelos@gentoo.org>
   xfce-utils-4.5.92.ebuild, xfce-utils-9999.ebuild:
   Moved XFCE_CONFIG to pkg_setup
